<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingTop="24dp"
        android:paddingBottom="12dp"
        android:text="@string/workerList"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/et1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/search"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="2"
        android:fillViewport="true"
        android:gravity="top">
        <ListView
            android:id="@+id/lv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></ListView>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:textColor="#0000FF"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/clear_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_all"
            android:layout_weight="1"
            android:textColor="#0000FF"
            style="?android:attr/borderlessButtonStyle"/>

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:layout_weight="1"
            android:textColor="#0000FF"
            style="?android:attr/borderlessButtonStyle"/>
    </LinearLayout>

</LinearLayout>