<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/backup_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:paddingTop="16dp">

    <ImageView
        android:id="@+id/password_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_lock"
        android:contentDescription="@string/description_password_icon"/>

    <EditText
        android:id="@+id/password"
        style="@android:style/TextAppearance.Material.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password_icon"
        android:layout_alignTop="@+id/password_icon"
        android:layout_marginStart="8dp"
        android:layout_toEndOf="@+id/password_icon"
        android:gravity="center_vertical"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/password"
        android:imeOptions="actionGo" />


    <CheckBox
        android:id="@+id/use_fingerprint_in_future_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:checked="true"
        android:visibility="gone"
        android:text="@string/use_fingerprint_in_future" />

</RelativeLayout>