<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="@dimen/margin"
    android:paddingBottom="@dimen/margin"
    android:paddingEnd="@dimen/margin">

<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:paddingEnd="15dp"
    android:paddingTop="20dp"
    android:background="@drawable/listview_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/startPhoto"
            android:layout_width="match_parent"
            android:layout_height="212dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="206dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnStartStaffInfo"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/buttonshapeblue"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/btnStaffInfo"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/normalFontSize"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnStartDelete"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/margin"
                android:layout_marginLeft="5dp"
                android:background="@drawable/buttonshapedarkblue"
                android:text="@string/btnDelete"
                android:textColor="@color/white"
                android:textSize="@dimen/normalFontSize"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTxtStartComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:hint="@string/editTxtComment"
                android:inputType="text"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:textSize="@dimen/normalFontSize"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin"
        android:layout_weight="1"
        android:text="名單"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="@dimen/normalFontSize"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="20sp" />

</LinearLayout>
</FrameLayout>